# berlin-flat-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: scrape.yml
bot/: config.py  main.py  matcher.py  notifier.py  run_once.py
bot/database/: db.py  models.py
bot/handlers/: commands.py  search.py
bot/keyboards/: search_kb.py
bot/scrapers/: allod.py  base.py  buwog.py  citywohnen.py  engelvoelkers.py  furnishedflats.py  immoscout.py  livinginberlin.py  playwright_base.py  shorecapital.py
tests/: test_keyboards.py  test_matcher.py  test_notification_text.py
